# Biplanes

./: .gitignore  Biplanes.sln  CMakeLists.txt  README.md
Biplanes/: Animation.cpp  Animation.h  Biplanes.vcxproj  Biplanes.vcxproj.filters  Bullet.cpp  Bullet.h  Constants.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Logger.h  MathUtilities.inl  Plane.cpp  Plane.h  Player.cpp  Player.h  ResourcesManager.cpp  ResourcesManager.h  SceneManager.cpp  SceneManager.h  Utils.cpp  Utils.h
Biplanes/Debug/: Biplanes.exe.recipe  Biplanes.ilk  vc142.idb
Biplanes/Debug/Biplanes.tlog/: Biplanes.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
Biplanes/include/: AI.h  Animation.h  Constants.h  DamageEffects.h  Entity.h  Game.h  Logger.h  MathUtilities.inl  Parachutist.h  Plane.h  PlaneSpawner.h  Player.h  ResourcesManager.h  ScoreAirship.h  SpriteEntity.h  Utils.h
Biplanes/include/entities/: Animation.h  Entity.h  (+1 more)
Biplanes/src/: AI.cpp  Animation.cpp  Bullet.cpp  DamageEffects.cpp  Entity.cpp  Game.cpp  Logger.cpp  Parachutist.cpp  Plane.cpp  PlaneSpawner.cpp  Player.cpp  ResourcesManager.cpp  ScoreAirship.cpp  Utils.cpp  main.cpp
Debug/: Biplanes.ilk
include/: AI.h  Constants.h  Exception.h  Game.h  Player.h
include/entities/: Bullet.h  DamageEffects.h  Parachutist.h  Plane.h  ScoreAirship.h  SpriteEntity.h
sfml_property_sheet/: SFMLSettings.props
src/: Game.cpp  PlaneSpawner.cpp  ResourcesManager.cpp
src/entities/: Animation.cpp  Bullet.cpp
src/events/: Dispatcher.cpp
(+9 files in other folders)
